[package]
name = "obfs-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.35"
rand = "0.8.5"
syn = { version = "2.0.57", features = ["full", "extra-traits"] }
